--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body, h1, h2, p, ul, li {
 body {
     font-family: 'Helvetica Neue', Arial, sans-serif;
     line-height: 1.6;
-    background: linear-gradient(to right, #f4f4f4, #e0e0e0);
+    background: linear-gradient(to right, #d10d0d, #d12d0d);
     color: #333;
     padding: 0;
     margin: 0;
